--- a/Configurations/SocketRocket-iOS.xcconfig
+++ b/Configurations/SocketRocket-iOS.xcconfig
@@ -18,3 +18,6 @@ INFOPLIST_FILE = $(SRCROOT)/SocketRocket/Resources/Info.plist
 
 OTHER_CFLAGS[sdk=iphoneos9.*] = $(inherited) -fembed-bitcode
 OTHER_LDFLAGS = $(inherited) -Licucore
+
+// Specify architectures
+ARCHS = arm64 arm64e
